:compare-split: ...
endif::[]
ifdef::gitlab[]
:repo-url: https://gitlab.com/{owner}/{project}
:repo-compare: {repo-url}/compare/
:compare-split: ...
endif::[]

ifdef::latest-version[]
== link:{repo-compare}{latest-version}{compare-split}HEAD[Unreleased]
endif::[]
ifndef::latest-version[]
ifdef::first-commit[]
== link:{repo-compare}{first-commit}{compare-split}HEAD[Unreleased]
endif::[]
ifndef::first-commit[]
== Unreleased
endif::[]
endif::[]

:version: v0.1.1
:version-date: YYYY-MM-DD
:previous-version: v0.1.0
:version-file-url: {repo-url}/tree/{version}
:version-diff-url: {repo-compare}{previous-version}{compare-split}{version}
:version-log-url: {repo-changelog}#{version}---{version-date}

== link:{version-file-url}[{version} - {version-date}]

link:{version-file-url}[Code] (link:{version-diff-url}[Diff]) | link:{version-log-url}[Changelog]

Improved the output from `ArbitraryGitHubWebhook`.

### Added

* `headers` object to `ArbitraryGitHubWebhook` output
* `superagent` plugin to `ArbitraryGitHubWebhook` output

### Modified

* `ArbitraryGitHubWebhook`
  ** Made signing with a `secret` optional (added `useSecret` flag)

:version: v0.1.0
:version-date: 2018-01-05
:previous-version: {first-commit}
:version-file-url: {repo-url}/tree/{version}
:version-diff-url: {repo-compare}{previous-version}{compare-split}{version}
:version-log-url: {repo-changelog}#{version}---{version-date}

== link:{version-file-url}[{version} - {version-date}]

link:{version-file-url}[Code] (link:{version-diff-url}[Diff]) | link:{version-log-url}[Changelog]

Initial Release.  Created a basic `ArbitraryIssuesEvent` (and supporting data classes).

### Added
* Basic README.
* Helpers:
  ** `GitHubID`
  ** `GitHubUsername`
  ** `GitHubTime`
* Data Types:
  ** `WebhookLabel`
  ** `WebhookLabelList`
  ** `WebhookUser`
  ** `WebhookMilestone`
  ** `WebhookIssue`
  ** `WebhookOrganization`
  ** `WebhookRepository`
* Abstract `ArbitraryGitHubWebhook`
* Webhooks:
  ** `ArbitraryIssuesEvent`